--- a/API/demo/src/main/resources/application.properties
+++ b/API/demo/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 # Cấu hình kết nối SQL Server
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=OnlineExamDB
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=OnlineExam;encrypt=false;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=123456
+spring.datasource.password=123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-# Hibernate settings
+# Hibernate JPA
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-spring.jpa.hibernate.ddl-auto=update  # (create, update, validate, none)
-spring.jpa.show-sql=true  # Hiển thị SQL query trong console
+spring.jpa.hibernate.ddl-auto=update
+
+# Hiển thị SQL trên console
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
