--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=server
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=OnlineExamDB1;encrypt=false
-spring.datasource.username=sa1
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=OnlineExamDB;encrypt=false
+spring.datasource.username=sa
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
